--- a/public/styles.css
+++ b/public/styles.css
@@ -20,7 +20,8 @@ body {
     width: 100%;
     height: 100vh;
     margin-bottom: 30px;
-    background: linear-gradient(45deg, var(--primary-color) 0%, var(--secondary-color) 47%, rgba(70,125,142,1) 10200%);
+    background: linear-gradient(45deg, rgba(236, 69, 55, 0.5) 0%, rgba(29, 24, 24, 0.92) 47%, rgba(70,125,142,1) 10200%),url('./imgs/mars_landing_background.jpg');
+    background-size: cover;
     font-family: 'Space Mono', monospace;
     color: white;
     display: flex;
